--- a/package.json
+++ b/package.json
@@ -6,9 +6,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.20.0",
+    "d3": "^6.2.0",
+    "d3-cloud": "^1.2.5",
+    "re-resizable": "^6.7.0",
     "react": "^16.14.0",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.14.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "react-wordcloud": "^1.2.7",
+    "react-zoom-pan-pinch": "^1.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
